--- a/DeadCenter/Base.lproj/Main.storyboard
+++ b/DeadCenter/Base.lproj/Main.storyboard
@@ -84,6 +84,9 @@
                                 <rect key="frame" x="58" y="315" width="87" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Start Over"/>
+                                <connections>
+                                    <action selector="startNewGame" destination="BYZ-38-t0r" eventType="touchUpInside" id="TMF-Gz-Fww"/>
+                                </connections>
                             </button>
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="a9u-Q2-2yd">
                                 <rect key="frame" x="106" y="101" width="455" height="30"/>
